force-app/main/default/objects/COLARateSheet__c/COLARateSheet__c.object-meta.xml
<CustomObject>
    <label>Cola Rate Sheet</label>
    <nameField>
        <label>Cola Rate Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cola Rate Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>