force-app/main/default/objects/COLARateSheet__c/fields/DerivedFromId__c.field-meta.xml
<CustomField>
    <fullName>DerivedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Derived From</label>
    <referenceTo>ColaRateSheet__c</referenceTo>
    <relationshipLabel>Cola Rate Sheets</relationshipLabel>
    <relationshipName>ColaRateSheets</relationshipName>
    <type>Lookup</type>
</CustomField>