force-app/main/default/objects/COLARateSheet__c/fields/YearOverYearRate__c.field-meta.xml
<CustomField>
    <fullName>YearOverYearRate__c</fullName>
    <label>Year Over Year Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>